<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>
    <string name="app_name">Celebcam</string>
    <string name="yourName">Enter your name</string>
    <string name="titleName">Name</string>
    <string name="titleFBUsername">Facebook UserID</string>
    <string name="titleFBPassword">Facebook Password</string>
    
    <string name="summaryTwitterPin">Click to enter pin:</string>

    <string name="facebookUsername">Enter your facebook username</string>
    <string name="facebookPassword">Enter your facebook password</string>
    <string name="twitterUsername">Enter you twitter username</string>
    <string name="twitterPassword">Enter you twitter password</string>
    <string name="email_subject">Photo via Celebcam</string>
    <string name="email_message">Link to image goes here</string>
    <string name="title_email">Share</string>
    <string name="button_email">Email</string>
	<string name="button_twitter">Tweet</string>

	<string-array name="font_array">
	    <item>None</item>
        <item>New York</item>
        <item>Gothic</item>
        <item>Classic</item>
        <item>Hearts</item>
        <item>Psychedelic</item>
    </string-array>
    
		<string-array name="borders_array">
	    <item>None</item>
        <item>New York</item>
        <item>Gothic</item>
        <item>Classic</item>
        <item>Hearts</item>
        <item>Psychedelic</item>
    </string-array>
    
	<string-array name="sparkles_array">
	    <item>None</item>
        <item>New York</item>
        <item>Gothic</item>
        <item>Classic</item>
        <item>Hearts</item>
        <item>Psychedelic</item>
    </string-array>
	
</resources>
