<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">

<EditTextPreference android:title="@string/titleName"
android:summary="@string/yourName" android:key="username"></EditTextPreference>

<EditTextPreference android:title="@string/titleFBUsername"
android:summary="@string/facebookUsername" android:key="username"></EditTextPreference>

<EditTextPreference android:title="@string/titleFBPassword"
android:summary="@string/facebookPassword" android:key="username"></EditTextPreference>

<EditTextPreference android:title="@string/titleTwitterUsername"
android:summary="@string/twitterUsername" android:key="username"></EditTextPreference>

<EditTextPreference android:title="@string/titleTwitterPassword"
android:summary="@string/twitterPassword" android:key="username"></EditTextPreference>
	
</PreferenceScreen>
