<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

<TextView
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:gravity="center"
android:textSize="30sp"
android:layout_margin="10dp"
android:text="@string/title_email"
/>

<Button
android:id="@+id/Button_Email"
android:text="@string/button_email"
android:layout_height="wrap_content"
android:layout_width="fill_parent"
android:onClick="sendEmail">
</Button>

<Button
android:id="@+id/Button_OAuth"
android:text="@string/button_twitter"
android:layout_height="wrap_content"
android:layout_width="fill_parent"
android:onClick="authent">
</Button>

</LinearLayout>