<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    <EditText 
        android:id="@+id/oauth_pin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"></EditText>
    
	<TextView
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:textSize="30sp"
		android:layout_margin="10dp"
		android:text="@string/title_email"
	/>

    <!-- Tweet EditText -->
    <EditText 
        android:id="@+id/theTextField"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="top|center_horizontal"></EditText>
    
    <!-- Tweet Button -->
    <Button 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_twitter"
        android:onClick="postTweet"
        android:textSize="20sp"
        android:id="@+id/buttonUpdate"></Button>

    <!-- Email Button -->
	<Button
		android:id="@+id/Button_Email"
		android:text="@string/button_email"
		android:layout_height="wrap_content"
		android:layout_width="fill_parent"
		android:onClick="sendEmail">
	</Button>



</LinearLayout>